# qa.guru_lesson_14

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_fixtures.py  test_parametrize.py  test_simple.py  test_skip.py
utils/: attach.py
