[tool.poetry]
name = "qa-guru-lesson-15"
version = "0.1.0"
description = "no description"
authors = ["Irina.Voron <yarutich.irina@gmail.com>"]
license = "no license"
readme = "README.md"
packages = [{include = "qa"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
